tests/ui/panics/default-backtrace-ice.stderr
error[E0425]: cannot find value `missing_ident` in this scope
  --> $DIR/default-backtrace-ice.rs:14:13
   |
LL | fn main() { missing_ident; }
   |             ^^^^^^^^^^^^^ not found in this scope



stack backtrace:

error: the compiler unexpectedly panicked. this is a bug.







query stack during panic:
end of query stack
